# TOMSpaceshooter

./: .gitignore  .squot  CMakeLists.txt  LICENSE  README.md  spaceshooter_sheet.xml  spriteRenderer.c
assets/sprites/: LICENSE  spaceshooter_sheet.xml
experiments/: CMakeLists.txt  README.md  assemble-sprites.sh
experiments/libcontroller/: CMakeLists.txt  controller.c
experiments/libfmod/: CMakeLists.txt  Makefile
experiments/libspriterenderer/: CMakeLists.txt  spriteRenderer.c
libcontroller/: CMakeLists.txt  controller.c
libfmod/: .ycm_extra_conf.py  fmod-reverb.c
libspriterenderer/: spriteRenderer.c
src/BaselineOfTOMSpaceShooter/: BaselineOfTOMSpaceShooter.class.st  package.st
src/TOMGameEngine/: TOMAnimatedSprite.class.st  TOMAssetFactory.class.st  TOMCamera.class.st  TOMControllerEvent.class.st  TOMControllerState.class.st  TOMEvent.class.st  TOMGame.class.st  TOMGameBenchmark.class.st  TOMKeyboardEvent.class.st  TOMLabel.class.st  TOMMouseEvent.class.st  TOMParticle.class.st  TOMParticleManager.class.st  TOMPhysicsManager.class.st  TOMProgressBar.class.st  TOMRectangle.class.st  TOMRectangleRenderInfo.class.st  TOMScene.class.st  TOMSoundActor.class.st  TOMSoundEmitter.class.st  TOMSoundFactory.class.st  TOMSoundFactoryDummy.class.st  TOMSoundListenerDummy.class.st  TOMSoundSource.class.st  TOMSoundSourceDummy.class.st  TOMSoundSourceEmpty.class.st  TOMSpatialHashTable.class.st  TOMSprite.class.st  TOMSpriteRenderer.class.st  TOMSpriteRendererCroquet.class.st  TOMSpriteRendererExternal.class.st  TOMStateMachine.class.st  TOMTexture.class.st  (+3 more)
(+90 files in other folders)
